--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,7 +11,7 @@ body {
 }
 
 section {
-  margin-top: 2.5rem;
+  margin-top: 3rem;
 }
 
 /* @media screen and (max-width: 767px) {
@@ -36,8 +36,16 @@ section {
 }
 
 @layer components {
+  .title {
+    @apply uppercase text-balance text-3xl md:text-4xl
+  }
+
+  .text-color {
+    @apply text-[#CC8990]
+  }
+
   .tag {
-    @apply bg-[#f5b3bf64] py-1 px-2 rounded-lg inline-flex text-xl w-fit 
+    @apply bg-[#f5b3bf64] py-1 px-2 text-balance rounded-lg inline-flex text-xl w-fit 
   }
 
   .description {
